<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundPages"
    tools:context=".ui.authentication.signup.SignUpFragment">


    <TextView
        android:id="@+id/hellotextConst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppinsblack"
        android:text="@string/CreateAnAccountConst"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailConst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/emailConst"
        android:textColor="@color/MyBlack"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextName" />

    <TextView
        android:id="@+id/nameConsts"
        android:layout_width="38dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/nameConsts"
        android:textColor="@color/MyBlack"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wontTasklong" />

    <TextView
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/confirmPasswordConst"
        android:textColor="@color/MyBlack"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignin" />

    <EditText
        android:id="@+id/editTextTextName"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:autofillHints="constName"
        android:background="@drawable/edit_text_border"
        android:hint="@string/nameConsts"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColorHint="@color/edit_text_Border"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameConsts"
        tools:ignore="RtlSymmetry" />


    <EditText
        android:id="@+id/editTextPasswordSignin"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:autofillHints="Email"
        android:background="@drawable/edit_text_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColorHint="@color/edit_text_Border"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConstPassword"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/wontTasklong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/welcomConst"
        android:textColor="@color/MyblackLite"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hellotextConst" />

    <EditText
        android:id="@+id/editTextTextEmailAddressSginin"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_border"
        android:hint="@string/emailConst"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColorHint="@color/edit_text_Border"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailConst" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_border"
        android:hint="@string/confirmPasswordConst"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColorHint="@color/edit_text_Border"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <TextView
        android:id="@+id/ConstPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/enter_password"
        android:textColor="@color/MyBlack"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/signInguideline"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddressSginin" />


    <TextView
        android:id="@+id/SignupConsttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="Sign IN"
        android:textColor="@color/MyYellow"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/DontAccountSignup"
        app:layout_constraintStart_toEndOf="@+id/DontAccountSignup"
        app:layout_constraintTop_toTopOf="@+id/DontAccountSignup"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/DontAccountSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:text=" have an Account?"
        android:textColor="@color/MyBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInWithGoogle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpBtnlocalSignUpV"
        android:layout_width="315dp"
        android:layout_height="54dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/PrimaryColor"
        android:fontFamily="@font/poppinsblack"
        android:gravity="center"
        android:text="Sign up"
        android:textAlignment="center"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signInguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="731dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/signInWithGoogle"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:elevation="2dp"
        android:foregroundGravity="center"
        android:src="@drawable/googleicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:dividerInsetEnd="16dp"
        app:dividerInsetStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppinsblack"
        android:gravity="center"
        android:text="@string/or_sign_up_withConst"
        android:textColor="@color/Mygray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtnlocalSignUpV" />

</androidx.constraintlayout.widget.ConstraintLayout>